[gd_scene load_steps=18 format=3 uid="uid://crah5mw3epb4k"]

[ext_resource type="Script" path="res://src/game_management/MultiplayerController.gd" id="1_gqf14"]
[ext_resource type="Texture2D" uid="uid://ca4tkwnof2d1e" path="res://resources/background_mountains2/background.PNG" id="2_be4xg"]
[ext_resource type="Texture2D" uid="uid://0uk2y4imqeo5" path="res://resources/background_mountains2/Furthest mountains.PNG" id="3_f6uh5"]
[ext_resource type="Texture2D" uid="uid://cpu6abq138lmt" path="res://resources/background_mountains2/mountains2.PNG" id="4_73s7t"]
[ext_resource type="Texture2D" uid="uid://eo7qm6iukqdd" path="res://resources/background_mountains2/Nearest mountains.PNG" id="5_0s2hn"]
[ext_resource type="Texture2D" uid="uid://c4qe0b5c20kbn" path="res://resources/background_mountains2/Foreground.PNG" id="6_5uglx"]
[ext_resource type="Texture2D" uid="uid://drfwjevivwrca" path="res://resources/ui/GearsOfTime.png" id="8_8oieq"]

[sub_resource type="CanvasTexture" id="CanvasTexture_3nl55"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v45ds"]
texture = SubResource("CanvasTexture_3nl55")
modulate_color = Color(0.172549, 0.152941, 0.113725, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_rehoe"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3bdgm"]
texture = SubResource("CanvasTexture_rehoe")
modulate_color = Color(0.623529, 0.176471, 0.160784, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_7rost"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3mggm"]
texture = SubResource("CanvasTexture_7rost")
modulate_color = Color(0.623529, 0.176471, 0.160784, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_ytca0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ibdun"]
texture = SubResource("CanvasTexture_ytca0")
modulate_color = Color(0.623529, 0.176471, 0.160784, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_o868u"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7e47h"]
texture = SubResource("CanvasTexture_o868u")
modulate_color = Color(0.623529, 0.176471, 0.160784, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 388.0
offset_top = -40.0
offset_right = 388.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqf14")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
visible = false
modulate = Color(0.0901961, 0.858824, 0.564706, 1)
self_modulate = Color(0.266667, 1, 0.913725, 1)
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_be4xg")
flip_v = true

[node name="Background" type="Sprite2D" parent="CanvasLayer"]
z_index = -5
texture_filter = 1
position = Vector2(960.5, 305)
scale = Vector2(4.17174, 2.592)
texture = ExtResource("2_be4xg")

[node name="Background2" type="Sprite2D" parent="CanvasLayer"]
z_index = -4
texture_filter = 1
position = Vector2(471.5, 542.5)
scale = Vector2(2.50652, 2.612)
texture = ExtResource("3_f6uh5")

[node name="Background3" type="Sprite2D" parent="CanvasLayer"]
z_index = -3
texture_filter = 1
position = Vector2(961.5, 538.5)
scale = Vector2(4.18478, 4.444)
texture = ExtResource("4_73s7t")

[node name="Background4" type="Sprite2D" parent="CanvasLayer"]
z_index = -2
texture_filter = 1
position = Vector2(958.5, 543.5)
scale = Vector2(4.19348, 4.428)
texture = ExtResource("5_0s2hn")

[node name="Foreground" type="Sprite2D" parent="CanvasLayer"]
z_index = 3
texture_filter = 1
position = Vector2(960, 539.75)
scale = Vector2(4.17391, 4.322)
texture = ExtResource("6_5uglx")

[node name="Background5" type="Sprite2D" parent="CanvasLayer"]
z_index = -4
texture_filter = 1
position = Vector2(1624.5, 542.5)
scale = Vector2(2.50652, 2.612)
texture = ExtResource("3_f6uh5")

[node name="INEEDTHISFILTER" type="Sprite2D" parent="CanvasLayer"]
z_index = -4
texture_filter = 1
position = Vector2(1100.75, -379.953)
scale = Vector2(4.77935, 4.76762)
texture = ExtResource("3_f6uh5")
flip_v = true

[node name="GearsOfTime" type="Sprite2D" parent="."]
position = Vector2(580, 200)
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_8oieq")

[node name="ButtonsContainer" type="GridContainer" parent="."]
modulate = Color(0.862745, 0.72549, 0.827451, 1)
layout_mode = 0
offset_left = 380.0
offset_top = 512.0
offset_right = 764.0
offset_bottom = 992.0
theme_override_constants/v_separation = 22

[node name="StartGame" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../QuitGame")
focus_neighbor_bottom = NodePath("../Host")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_v45ds")
theme_override_styles/hover = SubResource("StyleBoxTexture_3bdgm")
text = "Start Game"

[node name="Host" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../StartGame")
focus_neighbor_bottom = NodePath("../IPInput")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_v45ds")
theme_override_styles/hover = SubResource("StyleBoxTexture_3mggm")
text = "Host"

[node name="IPInput" type="LineEdit" parent="ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Host")
focus_neighbor_bottom = NodePath("../Join")
focus_next = NodePath("../Join")
focus_previous = NodePath("../Host")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_v45ds")
placeholder_text = "Server IP Address"
alignment = 1

[node name="Join" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../IPInput")
focus_neighbor_bottom = NodePath("../QuitGame")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_v45ds")
theme_override_styles/hover = SubResource("StyleBoxTexture_ibdun")
text = "Join
"

[node name="QuitGame" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Join")
focus_neighbor_bottom = NodePath("../StartGame")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxTexture_v45ds")
theme_override_styles/hover = SubResource("StyleBoxTexture_7e47h")
text = "Quit"

[node name="ConsoleOutput" type="Label" parent="."]
layout_mode = 0
offset_left = -380.0
offset_top = 1088.0
offset_right = -20.0
offset_bottom = 1112.0

[connection signal="button_down" from="ButtonsContainer/StartGame" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="ButtonsContainer/Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="ButtonsContainer/Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="ButtonsContainer/QuitGame" to="." method="_on_quit_game_button_down"]
